                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)

  - 12-04-2005 added: navigation sounds
  - 11-04-2005 fixed: FullscreenVideo wasn't rescaled correctly to PAL60.
  - 11-04-2005 changed: GUIInfoManager if/else blocks to switch (faster)
  - 11-04-2005 fixed: Buffering text wasn't displayed during buffering
  - 11-04-2005 fixed: Selected item in My Videos wasn't remembered.
  - 11-04-2005 fixed: Double tap remote bug.
  - 11-04-2005 changed: Removed duplicate code from Video OSD/Fullscreen.
  - 11-04-2005 fixed: Context menu didn't popup in empty dirs if "Hide Parent Items" was turned on.
  - 11-04-2005 fixed: GUI Filters were not used correctly when returning from Slideshow.
  - 11-04-2005 changed: Removed duplicate code from the Video Playlist window
  - 11-04-2005 changed: Removed all info* controls as it was just duplicate code.
  - 11-04-2005 changed: Optimised lookup of info from GUIInfoManager.
  - 10-04-2005 added: Progressbar control now obey's width/height. Background texture is used as reference to calculate scaling of other textures.
  - 10-04-2005 added: the following api to HttpApi: config (access the configuration commands previously only available through ASP)
  - 10-04-2005 fixed: Crash in home on PM3 during video playback with UI off-center due to SetViewWindow() not correctly bounds checking.
  - 10-04-2005 changed: Cleaned up progressbar display during fullscreen and added two new conditional visibilty strings for skinning
                        Player.DisplayAfterSeek : Displays for 2.5 seconds after a seek has finished and during ff/rw
                        Player.IsCaching : True when the player is paused and recaching data